# ReversiGame

./: README.md  server.py
CppCore/: CMakeLists.txt  ReversiGame  bindings.cpp
CppCore/include/: Board.h  Game.h
CppCore/src/: Board.cpp  Game.cpp  main.cpp
static/: index.css  index.js
templates/: index.html  index.js
